Fixed z-index of navigation bar

--- a/UI/htdocs/static/css/base.css
+++ b/UI/htdocs/static/css/base.css
@@ -21,7 +21,7 @@ html, body {
     left:0px;
     width:100%;
     height:40px;
-    z-index:100;
+    z-index:100000;
     color:white;
     background-color:#0072c6;
     padding:0px 10px 10px 10px;
